@@ -18,4 +18,17 @@ MAGICK_CODER_STABILITY='BROKEN'
 MAGICK_FONT='@abs_top_srcdir@/PerlMagick/demo/Generic.ttf'
 
 PATH="@abs_top_builddir@/utilities:${PATH}"
+
+# Number of bits in a pixel Quantum (8/16/32)
+QuantumDepth=@QuantumDepth@
+
+# Memory limit (in MB) for a 'Q8' build
+Q8_MEMORY_LIMIT=32
+
+# Apply some resource limits (FAX/G4 need 2592x3508 pixel image!)
+export MAGICK_LIMIT_MEMORY=`expr $Q8_MEMORY_LIMIT '*' '(' $QuantumDepth / 8 ')'`MB
+export MAGICK_LIMIT_WIDTH=2592
+export MAGICK_LIMIT_HEIGHT=3508
+printf "Resource Limits: MAGICK_LIMIT_MEMORY=%s MAGICK_LIMIT_WIDTH=%s MAGICK_LIMIT_HEIGHT=%s\n\n" $MAGICK_LIMIT_MEMORY $MAGICK_LIMIT_WIDTH $MAGICK_LIMIT_HEIGHT
+
 set +a
