@@ -38,6 +38,8 @@
 <p>2020-11-08  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>common.shi.in: Apply some resource limits while running the test
+suite.</li>
 <li>coders/miff.c (WriteMIFFImage): Update to use resource-limit
 respecting memory allocators.</li>
 </ul>
