@@ -1,5 +1,8 @@
 2020-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* common.shi.in: Apply some resource limits while running the test
+	suite.
+
 	* coders/miff.c (WriteMIFFImage): Update to use resource-limit
 	respecting memory allocators.
 
